<resources>
    <string name="app_name">AndroidBlogApp</string>
    <string name="loginpage_email_hint">Your Email</string>
    <string name="loginpage_password_hint">Password</string>
    <string name="login_logo_img">Logo for login page</string>
    <string name="login_button">Login to Account</string>
    <string name="login_create_account_button">Need a new Account?</string>
    <string name="action_search">Search</string>
    <string name="action_settings">Account Settings</string>
    <string name="action_logout">Logout</string>
    <string name="register_button">Create new account</string>
    <string name="setup_hint_name">Your name</string>
    <string name="setup_button_name">Save Accout Settings</string>
    <string name="add_post_desc">Add new post</string>
    <string name="new_post_button_add_btn">Post Blog</string>
</resources>
